# Cartesian

./: .gitignore  CMakeLists.txt  README.md
CartesianLuajitCore/: CMakeLists.txt
CartesianLuajitCore/include/: CartesianConfig.h  CartesianEntryPoint.h  CartesianLog.h  CartesianPluginLoader.h
CartesianLuajitCore/src/: CartesianLog.cpp  CartesianPluginLoader.cpp
CartesianPlugins/: BindCGAL.cpp  BindCGAL.h  BindGLM_Matrix.cpp  BindGLM_MatrixTable.cpp  BindGLM_MatrixTable.h  BindGLM_PublicFunction.cpp  BindGLM_PublicFunction.h  BindGLM_Public_Matrix.h  BindGLM_Public_Vec.h  BindGLM_Vec.cpp  BindGLM_Vec.h  CMakeLists.txt  GLM_Matrix_Helper.h  GLM_Vec_Helper.h  README.md  main.cpp
CartesianPlugins/CGAL_Bind/: BindCGAL.cpp  BindCGAL.h  BindCGAL_DefineType.h  BindCGAL_Face_Functions.cpp  BindCGAL_Face_Functions.h  BindCGAL_MeshProcessing.cpp  BindCGAL_MeshProcessing.h  BindCGAL_Point_Functions.cpp  BindCGAL_Point_Functions.h  CGAL_Attrib_Helper.cpp  CGAL_Attrib_Helper.h  CGAL_PointAttrib_Helper.cpp  CGAL_PointAttrib_Helper.h
CartesianPlugins/GLM_Bind/: BindGLM_Matrix.cpp  BindGLM_Matrix.h  BindGLM_MatrixTable.cpp  BindGLM_MatrixTable.h  BindGLM_PublicFunction.cpp  BindGLM_Vec.cpp  GLM_Vec_Helper.h
CartesianPlugins/pystring_Bind/: PyStringBind.cpp  PyStringBind.h
KatanaCartesianJIT/: CMakeLists.txt  Cartesian.py  Katana3.6WithCartesian.bat  MergeNode.py  RegisterSphereMakerNode.py
KatanaCartesianJIT/katana_project/: ProceduralQUAD.katana  instance_test.katana  scatter.abc
KatanaCartesianJIT/src/: BindKatanaCH.h  BindKatanaData.h  BindKatanaGlobal.h  KatanaCartesian.cpp  KatanaCartesian.h
KatanaCartesianJIT/src/cpp/: BindKatanaCH.cpp  BindKatanaData.cpp  BindKatanaGlobal.cpp  ExchangeCGALGeo.cpp  KatanaCartesian.cpp
KatanaCartesianJIT/src/hpp/: BindKatanaCH.h  BindKatanaData.h  BindKatanaGlobal.h  BindKatanaTuple.h  ExchangeCGALGeo.h  KatanaCartesian.h
Sandbox/: CMakeLists.txt  main.cpp  test_point_attib.h
Sandbox/CASE_TEST_include/: test_base.h  test_point_add_set_get.h  test_point_add_set_get_matrix.h  test_point_attib.h  test_point_attrib_table.h  test_point_get_attrib_values.h  test_point_set_attrib_values.h  test_point_vec2_vec3_vec4.h  test_prim_add_set_get.h
Sandbox/CASE_TEST_src/: test_point_add_set_get.cpp  test_point_add_set_get_matrix.cpp  test_point_attrib_table.cpp  test_point_get_attrib_values.cpp  test_point_set_attrib_values.cpp  test_point_vec2_vec3_vec4.cpp  test_prim_add_set_get.cpp
